overlays/prod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: myweb
    app.kubernetes.io/instance: myweb
  name: myweb1
spec:
  host: myweb-prod.apps.ocp4.example.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: myweb
    weight: 100
  wildcardPolicy: None
status: {}
